Correct typo in Louis' name.

--- a/project_report.tex
+++ b/project_report.tex
@@ -43,7 +43,7 @@
 \large Members: \\ \bigskip
 \begin{minipage}[t]{0.3\textwidth}
 \begin{flushleft}
-Lai Huang Dung \\ \bigskip
+Lai Hoang Dung \\ \bigskip
 Lim Kiat \\ \bigskip
 Liu Xinan \\ \bigskip
 Tran Tien Dat
