--- a/project_report.tex
+++ b/project_report.tex
@@ -232,36 +232,43 @@ However, the downside of this approach is that it is harder to tweak to solve mo
 %===============================================================================
 \chapter{Interesting extensions}
 \section{iPad with fixed cost}
+
 What happens if we have to pay a penalty for each crushed iPad. How would it affect the game logic?
+
+
+
 To tackle this extension, we realise we can re-use our cost table approach, but modify the comparison step slightly to also include the fixed cost. 
+
 Using the table cost approach, we would calculate the cost of the whole DP table during the game initialisation, and subsequently use the value already calculated in the table cell to make the game decisions
+
 The pseudo code to calculate the DP table is as follows
 \begin{algorithm}
         \caption{Calculate the cost table for fixed iPad cost}
         \begin{algorithmic}[1]
             \REQUIRE N, L, iPadCost
             \STATE Initialise a 2D table DP[N+1][L+1], where the value of each cell is INFINITY
-            \STATE For all table cells (n, l) where l $\leq$ 1, initialise the value of the cell to be l*(1 + iPadCost)
-            \STATE For all table cells (n, l) where n = 1, initialise the value of the cell to be l
-            \STATE For all other tables cells (n, l) , the value at that cell is equal to min(1 + max(DP[x-1][n-1] + iPadCost, DP[L-x][n])) for $1 \leq x \leq l$
+            \STATE For all table cells DP[n][l] where l $\leq$ 1, initialise the value of the cell to be l*(1 + iPadCost)
+            \STATE For all table cells DP[n][l] where n = 1, initialise the value of the cell to be l + iPadCost
+            \STATE For all other tables cells DP[n][l] , the value at that cell is equal to min(1 + max(DP[x-1][n-1] + iPadCost, DP[L-x][n])) for $1 \leq x \leq l$
         \end{algorithmic}
 \end{algorithm}
-\\We can see that the difference between this and the previous cost table approach without iPad cost is only that the iPad cost is also added to the original cost in each cell
+
+We can see that the difference between this and the previous cost table approach without iPad cost is only that the iPad cost is also added to the original cost in each cell
 \section{iPad with dynamic cost}
 Let's make the problem even more complex. How do we tackle the problem if the cost of the iPad is not fixed, but changing depending on how many iPad has been crushed. 
-We can first define a function f, where f(n) denotes the cost of the $n^{th}$ being dropped
-Intuitively, we can see that this problem is very close to the fixed iPad cost problem. We can again use the cost table approach to pre-calculate the DP cost table. The difference lies in the fact that we also now need to consider how many iPads have been crushed before.
+We can first define a function f, where f(n) denotes the cost of the $n^{th}$ being dropped.
+Intuitively, we can see that this problem is very close to the fixed iPad cost problem. We can again use the cost table. approach to pre-calculate the DP cost table. The difference lies in the fact that we also now need to consider how many iPads have been crushed before.
 Therefore, to extend the solution for the fixed cost problem to also work in this, we can also store an attribute denoting the number of Ipad crushed. Each cell will then have two attributes, the cost and the number of iPad crushed
 The pseudo code to calculate the DP table is as follows
 \begin{algorithm}
         \caption{Calculate the cost table for fixed iPad cost}
         \begin{algorithmic}[1]
             \REQUIRE N, L, f
-            \STATE Initialise a 2D table DP[N+1][L+1], where each cell has cost INFINITY and numberOfiPadCrushed  0
-            \STATE For all table cells (n, l) where l $\leq$ 1, initialise the cost of the cell to be l*(1 + f(l)) and numberOfiPadCrushed  to be l
-            \STATE For all table cells (n, l) where n = 1, initialise the cost of the cell to be l+$\sum\limits_{i=1}^l f(i)$ and numberOfiPadCrushed to be l
-            \STATE For all other tables cell (n, l) 
-            \INDSTATE For all x in $1 \leq x \leq l$
+            \STATE Initialise a 2D table $DP[N+1][L+1]$, where each cell has cost $INFINITY$ and numberOfiPadCrushed  $0$
+            \STATE For all table cells $DP[n][l]$ where $l \leq 1$, initialise the cost of the cell to be $l*(1 + f(l))$ and numberOfiPadCrushed  to be $l$
+            \STATE For all table cells $DP[n][l]$ where $n = 1$, initialise the cost of the cell to be $l+f(1)$ and numberOfiPadCrushed to be $1$
+            \STATE For all other tables cell $DP[n][l]$
+            \INDSTATE For all $x$ in $1 \leq x \leq l$
             \INDSTATE[2] ipadCostWhenCrushed = f(DP[x-1][n-1].numberOfiPadCrushed +1)
             \INDSTATE[2] If DP[L-x][n].cost >= DP[x-1][n-1].cost + ipadCostWhenCrushed
             \INDSTATE[3] cost = DP[L-x][n].cost + 1
@@ -271,7 +278,7 @@ The pseudo code to calculate the DP table is as follows
             \INDSTATE[3] numberOfiPadCrushed = DP[x-1][n-1].numberOfiPadCrushed +1
             \INDSTATE[2] If cost $\leq$ DP[n][l]
             \INDSTATE[3] DP[n][l].cost = cost
-            \INDSTATE[3] DP[n][l].numberOfiPadCrushed = numberOfiPadCrushed 
+            \INDSTATE[3] DP[n][l].numberOfiPadCrushed = numberOfiPadCrushed
 
         \end{algorithmic}
 \end{algorithm}
