Fix position of code in extension section

--- a/project_report.tex
+++ b/project_report.tex
@@ -281,14 +281,15 @@ In this extension, we consider two scenarios: The number of iPads is finite or i
 In the case that there is a finite number of iPads, the DP table will be a 2D array, where the number of rows represent the number of iPads, and the number of columns represents the number of levels
 
 The pseudo code to calculate the DP table is as follows
-\begin{algorithm}
+
+\begin{algorithm}[H]
         \caption{Calculate the cost table for fixed iPad cost (finite number of iPads)}
         \begin{algorithmic}[1]
-            \REQUIRE L, iPadCost
-            \STATE Initialise a 1D table DP[L+1], where the value of each cell is INFINITY
-            \STATE Let DP[0] be 0
-            \STATE Let DP[1] be iPadCost
-            \STATE For all other tables cells DP[n] , the value at that cell is equal to min(1 + max(DP[x-1] + iPadCost, DP[L-x])) for $1 \leq x \leq l$
+            \REQUIRE N, L, iPadCost
+            \STATE Initialise a 2D table DP[N+1][L+1], where the value of each cell is INFINITY
+            \STATE For all table cells DP[n][l] where l $\leq$ 1, initialise the value of the cell to be l*(1 + iPadCost)
+            \STATE For all table cells DP[n][l] where n = 1, initialise the value of the cell to be l + iPadCost
+            \STATE For all other tables cells DP[n][l] , the value at that cell is equal to min(1 + max(DP[x-1][n-1] + iPadCost, DP[L-x][n])) for $1 \leq x \leq l$
         \end{algorithmic}
 \end{algorithm}
 
@@ -299,14 +300,15 @@ We can see that the difference between this and the previous cost table approach
 In the case that there is an infinite number of iPads, the DP table only needs to be a 1D array. Since the number of iPads is infinite, we no longer need to worry that we might run out of iPads. As such, we only need to consider how the cost will vary by the level. The number of cells in the DP table (or in this case the DP row) hence represents the number of levels
 
 The pseudo code to calculate the DP table is as follows
+
 \begin{algorithm}
-        \caption{Calculate the cost table for fixed iPad cost (finite number of iPads)}
+        \caption{Calculate the cost table for fixed iPad cost (infinite number of iPads)}
         \begin{algorithmic}[1]
-            \REQUIRE N, L, iPadCost
-            \STATE Initialise a 2D table DP[N+1][L+1], where the value of each cell is INFINITY
-            \STATE For all table cells DP[n][l] where l $\leq$ 1, initialise the value of the cell to be l*(1 + iPadCost)
-            \STATE For all table cells DP[n][l] where n = 1, initialise the value of the cell to be l + iPadCost
-            \STATE For all other tables cells DP[n][l] , the value at that cell is equal to min(1 + max(DP[x-1][n-1] + iPadCost, DP[L-x][n])) for $1 \leq x \leq l$
+            \REQUIRE L, iPadCost
+            \STATE Initialise a 1D table DP[L+1], where the value of each cell is INFINITY
+            \STATE Let DP[0] be 0
+            \STATE Let DP[1] be iPadCost
+            \STATE For all other tables cells DP[n] , the value at that cell is equal to min(1 + max(DP[x-1] + iPadCost, DP[L-x])) for $1 \leq x \leq l$
         \end{algorithmic}
 \end{algorithm}
 
